--- a/package.json
+++ b/package.json
@@ -15,5 +15,22 @@
   "bugs": {
     "url": "https://github.com/adrianhorning08/cogo_coding_challenge/issues"
   },
-  "homepage": "https://github.com/adrianhorning08/cogo_coding_challenge#readme"
+  "homepage": "https://github.com/adrianhorning08/cogo_coding_challenge#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
+  }
 }
